--- a/app/views/blogs/new.html.haml
+++ b/app/views/blogs/new.html.haml
@@ -1,23 +1,23 @@
 = form_for(@blog, :html => { :class => "middle_box new_page" }) do |f|
-  %h1<
+  %h1
     新建页面
-  %h2<
+  %h2
     按兴趣的不同
-  .page_name<
+  .page_name
     = f.label :title, "页面名称"
     = f.text_field :title
-  .error<
+  .error
     &nbsp;
     = @blog.errors[:title].first
-  .page_url<
+  .page_url
     = f.label :uri, "自定义网址"
     = f.text_field :uri
-    %span<
+    %span
       = server_name
-  .error<
-    %span.suggestion<
+  .error
+    %span.suggestion
       (网址随时都可以修改)
     &nbsp;
     = @blog.errors[:uri].first
-  .submit_box<
+  .submit_box
     = f.submit " "
