--- a/app/views/blogs/followers.html.haml
+++ b/app/views/blogs/followers.html.haml
@@ -1,5 +1,19 @@
-%h1 关注此页面的用户
+- content_for :title, "我关注的页面_宽岛"
 
-- @followers.each do |user|
-  .blog_followers
-    = user.name
+.middle_box.followers
+  %h1
+    ="XXX人正在关注XXX"
+
+  - @followers.each do |user|
+    - blog = user.blogs.first
+    .follower{ :id => "blog_#{blog.id}" }
+      .avatar
+        %a{ :href => root_url(:subdomain => blog.uri) }
+          %img{ :src => blog.icon.url_for(:meduim) }
+      .fo_name
+        %a{ :href => root_url(:subdomain => blog.uri) }
+          = user.name
+      - unless blog.edited?(current_user)
+        %a{ :href => "/blogs/#{blog.id}/follow_toggle", :data => {:method => "post", :remote => "true"} }
+          .btn_unfollow{ :style => (current_user.all_blogs.include?(blog) ? "" : "display:none") }
+          .btn_follow{ :style => (current_user.all_blogs.include?(blog) ? "display:none" : "") }
