--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -65,3 +65,61 @@
     width: 200px                                
     float: left                                 
     margin: 20px 30px                           
+
+.followers,
+.following
+  .follower
+    width: 550px
+    padding: 15px 0 5px 20px
+    font-size: 20px
+    height: 70px
+    line-height: 80px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+    border-radius: 8px
+    border: 1px solid #cadbea
+    background: #fff
+    margin-bottom: 30px
+
+  .avatar
+    width: 62px
+    height: 62px
+    float: left
+
+    .image
+      width: 60px
+      height: 60px
+      border: 1px solid gray
+      margin-bottom: 5px
+      background: url('/images/avatar.jpg')
+
+  .fo_name
+    font-weight: bold
+    line-height: 60px
+    font-size: 14px
+    width: 350px
+    padding-left: 20px
+    float: left
+    height: 60px
+    overflow: hidden
+
+    a
+      color: #f93
+
+  .btn_unfollow
+    margin-top: 20px
+    width: 80px
+    height: 20px
+    background: url('/images/btn_unfollow.gif') no-repeat
+    float: left
+    cursor: pointer
+    overflow: hidden
+
+  .btn_follow
+    margin-top: 20px
+    width: 80px
+    height: 20px
+    background: url('/images/btn_follow.gif') no-repeat
+    float: left
+    cursor: pointer
+    overflow: hidden
