Vairous text and style fix

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -23,7 +23,7 @@
               - @target_blogs.each do |b|
                 %option{value: b.id}
                   = b.title
-    .cancel
+    %a.cancel{href: "/home"}
     .send
       %button{type: "submit", value: "Commit"}
         SUBMIT
