--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -37,6 +37,9 @@
   label
     color: gray
 
+span.suggestion
+  color: #68879F
+
 .edit_page
   .submit_box input                             
     background: url('/images/post_save.gif')    
