--- a/public/stylesheets/blog_show.css
+++ b/public/stylesheets/blog_show.css
@@ -16,7 +16,32 @@ a img {
 
 #wrapper {
   width: 900px;
-    margin: 0 auto;
+  margin: 0 auto;
+  position: relative;
+}
+.commands {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.commands a {
+  float: right;
+}
+
+.back_to_home, .btn_unfollow, .btn_follow {
+  text-indent: -9999px;
+  width: 80px;
+  height: 20px;
+  margin-left: 10px;
+}
+.back_to_home {
+  background: url('/images/btn_backhome.gif');
+}
+.btn_follow {
+  background: url('/images/btn_follow.gif')
+}
+.btn_unfollow {
+  background: url('/images/btn_unfollow.gif')
 }
 #wrapper #title {
   margin: 30px 0;
@@ -34,13 +59,11 @@ float:left;
 }
 
 #wrapper #content .post{
-width:500px;
 -moz-border-radius:15px; 
 -webkit-border-radius:15px; 
 border-radius:15px;
 border:1px solid #dcdcdc;
 overflow:hidden;
-padding:50px 50px 0px 50px;
 margin-bottom:30px;
 }
 
@@ -103,16 +126,31 @@ color:gray;
     text-transform: lowercase;
 }
 
-#wrapper #content #navigation a {
+#wrapper #content #navigation a,
+#navigation div {
 background-color: #fff;
   color: #3b627e;
   padding: 5px 10px;
   text-decoration: none;
-  margin-left: 25px;
 }
 
 #wrapper #content #navigation a:hover {
 opacity: 0.9;
   filter: alpha(opacity=90);
   -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-}	
+}
+
+.page_control {
+  float: right;
+  height: 24px;
+  width: 170px;
+}
+
+.page_control .page_number,
+.page_control .page_left {
+  float: left
+}
+
+.page_control .page_right {
+  float: right;
+}
