--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,7 +16,7 @@
     - invite_url = "#{root_url(:subdomain => 'www')}signup/#{current_user.inv_code}"
     %input.invite{readonly: true, value: invite_url}><
     &nbsp;|&nbsp;
-    %a.logout{href: "/signout"}><
+    %a.logout{ :href => "/signout", :data => { :confirm => "确定登出?" } }><
 .dashboard
   .menu
     .dash_operation
@@ -84,7 +84,7 @@
         .right
     .timeline
       - @posts.each do |p|
-        .article
+        .article.tar_post
           .avatar
             .image<
               %a{href: root_url(:subdomain => p.blog.uri)}<
