--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,4 @@
-- @sub_title = "你的朋友#{@inv_user.name}宽街小分队邀请你参与测试"
+- @sub_title = "你的朋友#{@inv_user.name}邀请你参与测试"
 - @sub_title_class = "register_title"
 
 = form_for(@user, :url => users_path, :html => {:class => 'register'}) do |f|
