--- a/app/views/posts/_pics_single.html.haml
+++ b/app/views/posts/_pics_single.html.haml
@@ -2,4 +2,4 @@
 - image = photo.image
 %a{href: image.url_for(:original), target: "blank", title: photo.desc}
   = image_tag image.url_for(:large)
-%p= pics_single.content
+%p!= pics_single.content
