--- a/app/views/posts/_video.html.haml
+++ b/app/views/posts/_video.html.haml
@@ -1,6 +1,6 @@
 .video_thumb{ :style => (!!@default_open ? "display:none" : "") }
-  %a.video_tar_open{ :href => video.player }       
-    %img{ :src => video.thumb }     
+  %a.video_tar_open{ :href => video.player }
+    %img{ :src => video.thumb }
     .video_thumb_play<
       &nbsp;
 .video_full{ :style => (!@default_open ? "display:none" : "") }
@@ -8,11 +8,10 @@
     %a.video_tar_close{ :href => "#" }<
       收起
   - unless video.site.nil?
-    %span                        
-      来自:                      
-      %a{ :href => video.url }<  
-        = video.site             
-  .video_player  
+    %span
+      来自:
+      %a{ :href => video.url }<
+        = video.site
+  .video_player
 %p<
-  = video.content
-   
+  != video.content
