fix mooeditable config

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -141,8 +141,8 @@
   .title_link,
   .url_image
     clear: both
-    width: 685px
-    padding: 5px 0 5px 20px
+    width: 705px
+    padding: 5px 0
     font-size: $input-font-size
     height: $input-height + 5px
     line-height: $input-height + 5px
