--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -151,7 +151,10 @@
     background: white
     margin-bottom: 30px
 
-  div.rich_text
+    label
+      padding-left: 20px
+
+  .rich_text
     padding: 0px
 
   .title_text input,
@@ -168,9 +171,10 @@
 
   .text textarea
     border: 0
-    @include size(670px, 180px)
+    @include size(650px, 180px)
     font-size: $input-font-size
     line-height: 1.5
+    padding-left: 20px
 
   .operation
     height: 44px
