New default blog icon with 3 verions

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -125,7 +125,7 @@ a.page_name
     @include size(60px, 60px)
     border: 1px solid gray
     float: left
-    background: url('/images/default_blog_icon.jpg')
+    background: url('/images/default_icon_medium.gif')
 
 
   .post_area
