fix post form submit bug in ie6

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -25,5 +25,4 @@
                   = b.title
     %a.cancel{href: "/home"}
     %div{class: params[:action] == 'new' ? 'send' : 'save'}
-      %button{type: "submit", value: "Commit"}
-        SUBMIT
+      %input{ :type => "submit", :value => " " }
