--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,7 +10,7 @@
     %a{href: edit_user_path(current_user)}设置
     &nbsp;| 邀请好友加入&nbsp;
     - invite_url = "#{root_url(:subdomain => 'www')}signup/#{current_user.inv_code}"
-    %input.invite{readonly: true, value: invite_url}><
+    %input.invite{readonly: true, value: invite_url, onclick: "this.select();"}><
     &nbsp;|&nbsp;
     %a.logout{ :href => "/signout", :data => { :confirm => "确定登出?" } }><
 .dashboard
