--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -8,7 +8,7 @@
   overflow: hidden
 
 .content_head
-  @include single_line(50px)
+  height: 50px
   padding: 0px 25px
 
 .content_body
@@ -225,6 +225,7 @@
   margin-right: 0
   float: right
   display: inline
+  text-decoration: none
 
 .post
   .remove, .open, .edit
