Style for movings/new, minimal layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title<
       = content_for?(:title) ? content_for(:title) : "宽岛"
     = stylesheet_link_tag "base"
+    - if not @css.nil?
+      = stylesheet_link_tag *(@css.uniq)
     - js 'application', 'mootools-more', 'rails', 'mootools-core'
     - @js.uniq.reverse!.each do |f|
       = javascript_include_tag f
