--- a/app/views/movings/new.html.haml
+++ b/app/views/movings/new.html.haml
@@ -1,3 +1,6 @@
+- content_for :site_layout, 'site_middle_size'
+- css 'gear'
+
 = form_for(:moving, :url => movings_path, :html => {:class => "middle_box the_kt_gear"}) do |f|
   %h1 搬家工具
   %h2 请输入宽途页面地址，比如 http://12345678.kuantu.com 或 1234
