--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -25,7 +25,7 @@
     %span#blog_icon_feed
   .toggle_private
     = f.check_box :private
-    = f.label :private, "一般人不给她看"
+    = f.label :private, "设置为私密页面"
   .submit_box.edit_box
     = f.submit " "
 :javascript
