--- a/app/views/movings/new.html.haml
+++ b/app/views/movings/new.html.haml
@@ -1,4 +1,6 @@
 - content_for :site_layout, 'site_middle_size'
+- content_for :title, '搬家工具_宽岛'
+
 - css 'gear'
 
 = form_for(:moving, :url => movings_path, :html => {:class => "middle_box the_kt_gear"}) do |f|
