--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -3,6 +3,7 @@
 .post
   margin: 20px auto 0 auto
   @include border-radius(15px)
+  @include clear_fix
   border: 1px solid $pink
   background: $almost-white
   padding: 0 20px
