Fix dashboard menu icon

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -45,8 +45,7 @@ a.page_name
 
   .menu_arrow
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -28px -14px
-
+    background: url('/images/icons.gif') -40px -20px
 
   .icon_create
     background: url('/images/icons.gif') -14px 0px
@@ -58,7 +57,7 @@ a.page_name
 
   .icon_follow
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') 0px 0
+    background: url('/images/icons.gif') 0 0
 
 
   .icon_follow2
@@ -67,19 +66,19 @@ a.page_name
 
   .icon_posts
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -98px 0px
+    background: url('/images/icons.gif') -140px 0px
 
   .icon_followed
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -42px 0px
+    background: url('/images/icons.gif') -60px 0px
 
   .icon_config
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -56px 0px
+    background: url('/images/icons.gif') -80px 0px
 
   .icon_remove
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -70px 0px
+    background: url('/images/icons.gif') -100px 0px
 
   .icon_post
     @include dashboard_sidebar_button
@@ -87,7 +86,7 @@ a.page_name
 
   .icon_view
     @include dashboard_sidebar_button
-    background: url('/images/icons.gif') -98px 0px
+    background: url('/images/icons.gif') -140px -20px
 
   .dash_operation
     margin-left: 10px
@@ -177,10 +176,10 @@ a.page_name
     padding-top: 30px
 
 .highlight_following .menu_arrow
-  background: url('/images/icons.gif') -14px -14px
+  background: url('/images/icons.gif') -20px -20px
 
 .highlight_following .icon_follow
-  background: url('/images/icons.gif') 0px -14px
+  background: url('/images/icons.gif') 0px -20px
 
 .real_fucking_following
   visibility: hidden
