--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -90,3 +90,4 @@
               %a.page_name{href: url_for(p.blog)}= p.blog.title
           .content= render_post p
     = pagination(@posts)
+= render :partial => 'shared/footer'
