--- a/app/views/layouts/account.html.haml
+++ b/app/views/layouts/account.html.haml
@@ -1,6 +1,7 @@
 - @header = @footer = "main"
 - content_for :content, do
   = yield
+  = render :partial => 'shared/footer'
 
 - content_for :head, do
   = stylesheet_link_tag "user"
