--- a/app/views/layouts/minimal.html.haml
+++ b/app/views/layouts/minimal.html.haml
@@ -4,5 +4,6 @@
     .dash_navigator
       %a{href: "/"}回我的主页
   = yield
+  = render :partial => 'shared/footer'
 
 = render :file => 'layouts/application'
