--- a/app/views/layouts/user.html.haml
+++ b/app/views/layouts/user.html.haml
@@ -2,6 +2,7 @@
 
 - content_for :content, do
   = yield
+  = render :partial => 'shared/footer'
 
 - content_for :head, do
   = stylesheet_link_tag "user"
