Fix navigator naming issue

--- a/app/views/layouts/minimal.html.haml
+++ b/app/views/layouts/minimal.html.haml
@@ -1,7 +1,7 @@
 - content_for :content, do
   .header
     %a.logo{href: "/"}
-    .dash_navigator
+    .navigator
       %a{href: "/"}回我的主页
   = yield
   = render :partial => 'shared/footer'
