--- a/app/views/movings/new.html.haml
+++ b/app/views/movings/new.html.haml
@@ -5,7 +5,7 @@
 
 = form_for(:moving, :url => movings_path, :html => {:class => "middle_box the_kt_gear"}) do |f|
   %h1 搬家工具
-  %h2 请输入宽途页面地址，比如 http://12345678.kuantu.com 或 1234
+  %h2 请输入宽途页面地址，比如 http://silence.kuantu.com 或 silence
   .weburl
     = f.label :from_uri, '网址'
     = f.text_field :from_uri
