--- a/app/views/shared/404.html.haml
+++ b/app/views/shared/404.html.haml
@@ -3,7 +3,7 @@
 %head
   %title 404_宽岛
   :css
-    .e404 { display: block; background: url('images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
+    .e404 { display: block; background: url('/images/404.jpg') no-repeat; width: 700px; height: 605px; margin: auto; }
     .e404_words { width: 500px; font-size: 20px; margin: auto; }
 %body
   %a.e404{href: root_url(:subdomain => 'www')}
