--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %meta{'http-equiv' => 'content-type', 'content' => 'text/html; UTF-8'}
     %title<
       = content_for?(:title) ? content_for(:title) : "宽岛"
     = stylesheet_link_tag "base"
