root debug users show blog_url

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -87,7 +87,7 @@
               %a{href: root_url(:subdomain => p.blog.uri)}<
                 =image_tag p.blog.icon.url_for(:medium)
             %div<
-              %a.page_name{href: url_for(p.blog)}= p.blog.title
+              %a.page_name{href: root_url(:subdomain => p.blog.uri)}= p.blog.title
           .content= render_post p
     = pagination(@posts)
 = render :partial => 'shared/footer'
